--- a/ESM_Worksheets/ESMValTool Worksheet_M1+.ipynb
+++ b/ESM_Worksheets/ESMValTool Worksheet_M1+.ipynb
@@ -83,10 +83,12 @@
    "source": [
     "**Data and Scripts needed:** <br>\n",
     "Raw Observation output: <br>\n",
-    "    - 1x HadISST (*HadISST_SST.nc*) <br>\n",
-    "    - Variables: ts/SST <br>\n",
-    "    - Frequency: Monthly mean <br><br>\n",
+    "- 1x HadISST (*HadISST_sst.nc*) <br>\n",
+    "- Variables: ts/SST <br>\n",
+    "- Frequency: Monthly mean <br>\n",
+    "\n",
     "Script: */home/arcdap/miniconda3/envs/esmvaltool/lib/python3.7/site-packages/esmvaltool/cmorizers/obs/cmorize_obs_hadisst.ncl*\n",
+    "\n",
     "---"
    ]
   },
