--- a/ESM_Worksheets/ESMValTool Worksheet_M1.ipynb
+++ b/ESM_Worksheets/ESMValTool Worksheet_M1.ipynb
@@ -81,8 +81,8 @@
    "metadata": {},
    "source": [
     "This worksheet is designed as a starting point for ARCDAP-3 participants to use ESMValTool and Python (through Jupyter Notebook) to perform routine model evaluation diagnostics on global climate models (GCMs) from the CMIP database. Some familiarity with the Python and Unix language, along with netCDF files is required to perform the exercises in this worksheet. By the end of ARCDAP-3, you should have successfully evaluated for your assigned GCM(s): <br>\n",
-    "* Plots of (and) mean air temperature, surface temperature and precipitation flux from 2000 - 2002. **(Module 1)** \n",
-    "* Plots of (and) mean air temperature, surface temperature and precipitation flux biases from 1995 - 2014. **(Module 2)** \n",
+    "* Plots of (and) mean 850 hPa air temperature and precipitation flux from 2000 - 2002. **(Module 1)** \n",
+    "* Plots of (and) mean surface temperature and precipitation flux biases from 1995 - 2014. **(Module 2)** \n",
     "* Plots of trends in sea-surface temperatures, ENSO and IOD indices from 1979-2014. **(Module 3)**  \n",
     "* Short write-ups on your results and observations  "
    ]
