Update and rename ESM_Worksheets/ESMValTool Worksheet_M3.ipynb to ESMValTool Worksheet_M3.ipynb

--- a/ESMValTool Worksheet_M3.ipynb
+++ b/ESMValTool Worksheet_M3.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# created by Gerald on 17 Jan 2020\n",
     "\n",
-    "# copy & paste the ESM_Worksheets folder into the ~/ESMValtool/ directory and open it there."
+    "# copy & paste the .ipynb into the ~/ESMValtool/ directory and open it there."
    ]
   },
   {
